# ta_assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.claude/: settings.local.json
docs/: index.md  quickstart.md
docs/api/: client.md  message.md
gmail_client/: __init__.py
scripts/: run_all_tests.py
src/: __init__.py  gmail_client.py
src/email_analytics/: pyproject.toml
src/email_analytics/src/email_analytics/: __init__.py  _analyzer.py
src/email_analytics/tests/: __init__.py  test_analyzer.py
src/email_client_api/: pyproject.toml
src/email_client_api/src/email_client_api/: __init__.py
src/email_client_api/tests/: __init__.py  test_email_service_protocol.py
src/email_message/: pyproject.toml
src/email_message/src/email_message/: __init__.py
src/email_message/tests/: __init__.py  test_email_message_protocol.py
src/gmail_client/: __init__.py
src/gmail_client_impl/: pyproject.toml
src/gmail_client_impl/src/gmail_client_impl/: __init__.py  _service.py
src/gmail_client_impl/tests/: __init__.py  test_gmail_service.py  test_implementations.py
src/gmail_client_protocol/: pyproject.toml
src/gmail_client_protocol/src/gmail_client_protocol/: __init__.py
src/gmail_message_impl/: pyproject.toml
src/gmail_message_impl/src/gmail_message_impl/: __init__.py  _implementation.py
src/gmail_message_impl/tests/: __init__.py  test_gmail_message.py
src/mail_client_api/: pyproject.toml
src/mail_client_api/src/mail_client_api/: __init__.py
src/mail_client_api/tests/: __init__.py  test_client_protocol.py
src/message/: pyproject.toml
src/message/src/message/: __init__.py
src/message/tests/: __init__.py
src/message_impl/: pyproject.toml
src/message_impl/src/message_impl/: __init__.py
tests/: __init__.py  conftest.py  test_gmail_client_main.py
tests/e2e/: __init__.py  test_gmail_workflow.py  test_main_application.py
tests/integration/: __init__.py  test_component_integration.py  test_gmail_client.py
tests/unit/: test_client_protocol.py  test_gmail_client_impl.py  test_gmail_client_main.py  test_gmail_message.py  test_implementations.py  test_message_protocol.py
