[project]
name = "email-client-api"
version = "0.1.0"
description = "Abstract Email Client Protocol and Contracts"
requires-python = ">=3.11"
dependencies = [
    "email-message",
]

[tool.uv.sources]
email-message = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D100", # Missing module docstring acceptable for protocol definitions
]

[tool.mypy]
strict = true