[project]
name = "gmail-client-impl"
version = "0.1.0"
description = "Gmail API Client Implementation for Email Service"
requires-python = ">=3.11"
dependencies = [
    "email-client-api",
    "email-message",
    "gmail-message-impl",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

[tool.uv.sources]
email-client-api = { workspace = true }
email-message = { workspace = true }
gmail-message-impl = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101", # Asserts acceptable for input validation
    "PLR0913", # Many parameters acceptable for configuration
    "S105", # Hardcoded passwords (these are client IDs, not secrets)
]

[tool.mypy]
strict = true