[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-message-impl"
version = "1.0.0"
description = "Gmail message implementation"
dependencies = [
    "message",
]
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
message = { workspace = true }