[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-client-api"
version = "1.0.0"
description = "Mail client API protocol definition"
dependencies = [
    "message",
]
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
message = { workspace = true }